# OPC-Client-X64

./: .gitignore  CMakeLists.txt  OPC_DA_ClientSDK.sln  README.md
.github/workflows/: cmake-single-platform.yml
LocalSyncWrapper/: CMakeLists.txt  LocalSyncOPCCLient.cpp  LocalSyncOPCCLient.h  LocalSyncWrapper.vcxproj  main.cpp  readme.md
OPCClientDemo/: CMakeLists.txt  OPCClientDemo.cpp  OPCClientDemo.vcproj  OPCClientDemo.vcxproj  OPCClientDemo.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
OPCClientDemo/x64/Debug/: BuildLog.htm
OPCClientDemo/x64/Release/: BuildLog.htm
OPCClientToolKit/: CMakeLists.txt  ChangeLog.txt  OPCClient.cpp  OPCClient.h  OPCClientToolKit.vcproj  OPCClientToolKit.vcxproj  OPCClientToolKit.vcxproj.filters  OPCClientToolKitDLL.h  OPCGroup.cpp  OPCGroup.h  OPCHost.cpp  OPCHost.h  OPCItem.cpp  OPCItem.h  OPCItemData.cpp  OPCItemData.h  OPCProperties.cpp  OPCProperties.h  OPCServer.cpp  OPCServer.h  OpcEnum.h  OpcEnum_i.c  ReadMe.txt  Transaction.cpp  Transaction.h  opccomn.h  opccomn_i.c  opcda.h  opcda_i.c  stdafx.cpp  stdafx.h
OPCClientToolKit/x64/Debug/: BuildLog.htm
OPCClientToolKit/x64/Release/: BuildLog.htm
OPCPerformance/: CMakeLists.txt  OPCPerformance.cpp  OPCPerformance.vcproj  OPCPerformance.vcxproj  OPCPerformance.vcxproj.filters  ReadMe.txt  items.txt  stdafx.cpp
OPCPerformance/x64/Debug/: BuildLog.htm
OPCPerformance/x64/Release/: BuildLog.htm
